package yanry.lib.java.model.watch;

/**
 * Created by yanry on 2020/3/3.
 */
public interface BooleanWatcher {
    void onValueChange(boolean to);
}
