package yanry.lib.java.model.watch;

public interface IntWatcher {
    void onValueChange(int to, int from);
}
